--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,10 @@
     <script src="main.js" defer></script>
   </head>
   <body>
-    <img id="video-img" src="" alt="stream image" />
+    <div id="list-of-streams"></div>
+    <div id="stream" style="display: hidden">
+      <img id="video-stream" src="" alt="Stream" />
+      <button id="leave-stream">Leave Stream</button>
+    </div>
   </body>
 </html>
