--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div id="list-of-streams"></div>
-    <div id="stream" style="display: hidden">
+    <div id="stream">
       <img id="video-stream" src="" alt="Stream" />
       <button id="leave-stream">Leave Stream</button>
     </div>
