--- a/client/index.html
+++ b/client/index.html
@@ -22,5 +22,6 @@
       <img id="video-stream" src="" alt="Stream" />
       <button id="leave-stream">Leave Stream</button>
     </div>
+    <button id="reload">Reload</button>
   </body>
 </html>
